solves issue of white background on mobile (still media queries to add)

--- a/src/components/Navbar/CssNavbar.css
+++ b/src/components/Navbar/CssNavbar.css
@@ -1,9 +1,3 @@
-/* .navbar-css {
-    background: FloralWhite; 
-    box-shadow: 0 5px 5px -2px rgba(0,0,0,.2);
-    z-index: 99;
-} */
-
 .navbar-css {  
     margin-bottom: -11%;
     font-family: 'Dancing Script', cursive;
@@ -54,15 +48,6 @@
     
   }
   
-  /*iPhone 5*/
-  
-  @media only screen and (min-device-width: 320px) and (max-device-width: 568px) 
-  and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40/71) {
-    
-      .navbar-css {
-        background: linear-gradient( #040182, #7573bf) !important;
-      }
-  }
   
   
   /*Galaxy 5s*/
@@ -263,3 +248,24 @@
   @media (min-width: 2000) {
   }
   
+
+  /*iPhone 5*/
+  
+  @media only screen and (min-device-width: 320px) and (max-device-width: 568px) 
+  and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 40/71) {
+    
+      .navbar-css {
+        /* background: linear-gradient( #040182, #7573bf) !important; */
+        margin-top: -7%;
+      }
+
+      .makeTurquoise {
+        background: linear-gradient(rgba(0, 200, 255, .5), rgba(0, 200, 255, .3));
+      }
+
+
+      #keepTransparency {
+        background-color: inherit;
+      }
+  }
+
